Front del Login.

--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "./node_modules/font-awesome/css/font-awesome.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/js/dist/index.js"
+            ]
           },
           "configurations": {
             "production": {
