--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               "./node_modules/font-awesome/css/font-awesome.css"
             ],
             "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/js/dist/index.js"
             ]
           },
