--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/router": "^6.1.0",
     "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.3",
+    "bootstrap-select": "^1.13.3",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "popper.js": "^1.14.3",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
