--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,10 @@
               "src/styles.scss",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
-              "node_modules/bootstrap-select/dist/css/bootstrap-select.css"
+              "node_modules/bootstrap-select/dist/css/bootstrap-select.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/nova-light/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
